Fixed styling, remove horizontal scrollbar issue

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -86,10 +86,14 @@ table {
 * {
   box-sizing: border-box;
 	color: var(--primary5);
+	/* outline: 1px solid #f00 !important; */
 }
 
 body {
+	position: relative;
+	min-width: 2000px;
 	background-color: var(--bg1);
+	overflow-x: hidden;
 }
 
 /* Header Container Styling */
@@ -103,6 +107,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
+	/* ABOVE 100 */
   height: 5vh;
 }
 
@@ -121,12 +126,16 @@ body {
 
 .dropdown-container {
   position: absolute;
-  border: 1px solid black;
   width: 20rem;
   max-height: 10rem;
-  background-color: white;
+  background-color: var(--bg5);
 	line-height: normal;
   overflow: auto;
+	z-index: 1000;
+}
+
+.dropdown-container:empty {
+  display: none;
 }
 
 .dropdown-item {
@@ -141,6 +150,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
+	/* ABOVE 100 */
 }
 
 .expirybar {
@@ -167,6 +177,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
+	/* ABOVE 100 */
 }
 
 .overview {
@@ -211,6 +222,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   width: 100vw;
+	/* ABOVE 100 */
   height: 75vh;
 	min-width: 20rem;
 }
